config/profile/rhdh/default-config/flavours/intelligent-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
spec:
  template:
    spec:
      containers:
        # Lightspeed Core Backend
        - name: lightspeed-core
          image: quay.io/lightspeed-core/lightspeed-stack:0.7.0rc3 # TODO: Update to 0.7.x release tag when available (by FF)
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 8080
              name: lcs-backend
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
          args:
            - "--synthesized-config-output"
            - "/tmp/.generated/run.yaml"
          volumeMounts:
            - mountPath: /tmp
              name: lightspeed-data

      volumes:
        - name: lightspeed-data
          emptyDir: { }
